[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pause Menu.png" type="Texture" id=1]
[ext_resource path="res://Pause Menu.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://video-023.ogv" type="VideoStream" id=6]

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause_Menu" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Continue" type="Button" parent="CanvasLayer/Pause_Menu"]
margin_left = -899.759
margin_top = -484.356
margin_right = -399.759
margin_bottom = -270.356
theme = ExtResource( 3 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/Pause_Menu"]
margin_left = -898.077
margin_top = 275.814
margin_right = -398.077
margin_bottom = 489.814
theme = ExtResource( 3 )
text = "Exit"

[node name="Exit_really\?" type="PopupDialog" parent="CanvasLayer/Pause_Menu/Exit"]
margin_left = 573.572
margin_top = -566.613
margin_right = 1796.57
margin_bottom = -73.6125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="CanvasLayer/Pause_Menu/Exit/Exit_really\?"]
margin_left = 19.5997
margin_top = 10.6908
margin_right = 1205.6
margin_bottom = 211.691
text = "Do you really want to exit
(You will lose all data
 after your last save)"

[node name="True_exit" type="Button" parent="CanvasLayer/Pause_Menu/Exit/Exit_really\?"]
margin_left = 654.467
margin_top = 246.171
margin_right = 1154.46
margin_bottom = 460.171
theme = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Continue" type="Button" parent="CanvasLayer/Pause_Menu/Exit/Exit_really\?"]
margin_left = 37.8712
margin_top = 243.851
margin_right = 537.871
margin_bottom = 457.851
theme = ExtResource( 3 )
text = "Continue"

[node name="Settings_button_game" type="Button" parent="CanvasLayer/Pause_Menu"]
margin_left = -894.714
margin_top = -114.362
margin_right = -394.714
margin_bottom = 99.6381
theme = ExtResource( 3 )
text = "Settings"

[node name="VideoPlayer" type="VideoPlayer" parent="CanvasLayer/Pause_Menu/Settings_button_game"]
visible = false
anchor_left = 1.79
anchor_top = 0.5
anchor_right = 1.79
anchor_bottom = 0.5
margin_left = -960.142
margin_top = -532.768
margin_right = 959.858
margin_bottom = 547.232
rect_clip_content = true
stream = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Pause_Menu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_Menu/Exit/Exit_really?/True_exit" to="." method="_on_True_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_Menu/Exit/Exit_really?/Exit_Continue" to="." method="_on_Exit_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_Menu/Settings_button_game" to="." method="_on_Settings_pressed"]
